# jsproxy

./: .env.example  .gitignore  Dockerfile  PLUGIN_PLAN.md  README.md  TCP_PLAN.md  docker-compose.yml  index.js  jest.config.js  jest.setup.js  package-lock.json  package.json  test-websocket.js
__mocks__/: acme-client.js
__tests__/: CertificateManager.test.js  DatabaseManager.test.js  HA.test.js  ProxyServer.test.js  TCP.test.js  chain-upload.test.js  expect-continue.test.js  integration.test.js  large-upload.test.js  plugin-rewrite.test.js  webhook.test.js  websocket-final.test.js  websocket-simple.test.js  websocket.test.js
__tests__/test-certs/: account-key.pem  concurrent.com.crt  concurrent.com.key  concurrent.com.selfsigned.crt  concurrent.com.selfsigned.key  default.crt  default.key  example.com.selfsigned.crt  example.com.selfsigned.key
deno/: deno.json  main.ts
deno/src/: CertificateManager.ts  DatabaseManager.ts  ProxyServer.ts
docs/: plugin-pii.md  plugin-telemetry.md  plugins.md
docs/bench/2026-04-25_10-19-43/: report.md
docs/bench/2026-04-25_10-22-11/: report.md
plugins/: _protocol.js  demo-backend.js  dlq-resurrect.js  hello-world.js  pii.js  retry.js  rewrite.js  telemetry.js
rust/: BENCH.md  Cargo.toml  Makefile  README.md
rust/examples/: axum_embed.rs
rust/scripts/: bench.sh
rust/src/: certificate.rs  database.rs  lib.rs  main.rs  proxy.rs
rust/tests/: integration_test.rs
scripts/: add-mapping.js  add-tcp-route.js  backup-database  bench.js  bench.py  manage-auth.js  migrate-certs.js  release.js  repro-ha-slow.js  run-demo.js
src/: CertificateManager.js  DatabaseManager.js  Logger.js  PluginManager.js  ProxyServer.js  Telemetry.js
sync/: .gitignore  Cargo.toml  Makefile
sync/src/: main.rs
(+2 files in other folders)
