[package]
name = "rustproxy"
version = "1.0.0"
edition = "2021"
description = "A resilient HTTP/HTTPS reverse proxy server - Rust port of jsproxy"
license = "MIT"
authors = ["RustProxy Contributors"]

[[bin]]
name = "rustproxy"
path = "src/main.rs"

[[bin]]
name = "rustproxy-mapping"
path = "src/bin/add_mapping.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server and client
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"

# TLS/SSL
tokio-rustls = "0.25"
rustls = { version = "0.22", features = ["ring"] }
rustls-pemfile = "2.0"
rcgen = "0.11"
webpki-roots = "0.26"

# ACME (Let's Encrypt) - Optional, not used in basic implementation
# instant-acme = "0.8"

# SQLite
rusqlite = { version = "0.30", features = ["bundled"] }

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
tokio-tungstenite = "0.21"
futures-util = "0.3"
base64 = "0.21"
chrono = "0.4"
url = "2.5"
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
dashmap = "5.5"
async-trait = "0.1"
pin-project-lite = "0.2"

# For HTTP client (proxying)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
hyper-tls = "0.6"

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"
wiremock = "0.5"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
